overflow, image-repeat, meadia breakpoints fix

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,12 @@
 body{
   /* background-image: url("https://thumbs.dreamstime.com/z/paper-background-flowers-d-paper-illustration-grayscal-grayscale-vector-eps-55406442.jpg"); */
   background-size: cover;
+  background-repeat: no-repeat;
+
   background-image: url(paper-flower.jpg);
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
 
 }
 h1{
@@ -83,7 +88,7 @@ h2.boom{
   text-align: center;
   margin: 10% 25%;
   line-height: 3rem;
-  font-size: 2.5rem;
+  font-size: 2.3rem;
   font-family: serif;
   word-spacing: 10px;
   position: relative;
@@ -103,6 +108,13 @@ h2.boom{
   .pages{
     font-size: 1.8rem;
     margin: 5% 13%;
+
+  }
+  h1{
+    font-size: 2rem;
+    line-height: 1.5;
+    font-family: cursive;
+    color: #fff;
   }
 }
 
